--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ label,
   display: inline;
 }
 
-.user {
+.info {
   display: flex;
 }
 
@@ -79,3 +79,62 @@ label,
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
+
+.content {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  padding: 15px;
+}
+
+.projects {
+  grid-row: 1 / 3;
+  padding-right: 15px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+
+.card {
+  border: 2px solid purple;
+  height: 200px;
+}
+
+.projects h3 {
+  grid-column: 1 / -1;
+}
+
+.announcement {
+  border: 2px solid orange;
+}
+
+.projects h3,
+.announcements h3,
+.trending h3 {
+  margin-bottom: 5px;
+}
+
+.users {
+  border: 2px solid indianred;
+  padding: 15px 15px 15px 0;
+  display: grid;
+  row-gap: 10px;
+}
+
+.user {
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+.user img {
+  place-self: center;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-areas: 1fr 1fr;
+  gap: 20px;
+}
+
