--- a/style.css
+++ b/style.css
@@ -1,24 +1,32 @@
+:root {
+  --sidebar-color: #c084fc;
+  --accent-color: #22c55e;
+  --content-color: #e5e7eb;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
 .sidebar {
-  border: 3px solid green;
+  background-color: var(--sidebar-color);
   grid-row: 1 / 3;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .header {
-  border: 3px solid pink;
-}
-
-.content {
-  border: 3px solid blue;
+  padding: 20px 30px 15px 30px;
+  position: relative;
+  box-shadow: 3px 2px 5px #a1a1aa;
 }
 
 .layout-container {
   display: grid;
   grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 4fr;
+  height: 100vh;
 }
 
 ul {
@@ -44,26 +52,34 @@ img {
 }
 
 .sidebar-nav img {
-  height: 1rem;
+  height: 1.2rem;
   justify-self: center;
 }
 
 img[alt^="Dashboard"] {
-  height: 2rem;
+  height: 2.5rem;
 }
 
 img[alt^="Dashboard"] + li {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .header {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
+  gap: 15px;
 }
 
 .search-container {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  align-items: center;
+}
+
+.profile {
+  justify-self: end;
+  display: flex;
+  gap: 10px;
 }
 
 label,
@@ -72,12 +88,23 @@ label,
 }
 
 .info {
-  display: flex;
+  display: grid;
+  grid-template-columns: 20px 1fr;
+  gap: 10px;
+  align-items: center;
 }
 
 .userinfo-container {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  align-items: center;
+}
+
+.buttons {
+  justify-self: end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .content {
@@ -93,13 +120,16 @@ label,
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
   gap: 15px;
 }
 
 .card {
-  border: 2px solid purple;
   height: 200px;
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  border-left: 10px solid var(--accent-color);
 }
 
 .projects h3 {
@@ -138,3 +168,49 @@ label,
   gap: 20px;
 }
 
+input[type="search"] {
+  background-color: lightgrey;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  line-height: 2rem;
+  width: 80%;
+  padding-left: 10px;
+}
+
+input[type="search"]:focus-visible {
+  border: 1px solid var(--accent-color);
+}
+
+.card {
+  display: grid;
+}
+
+.card-icons {
+  place-self: end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.card-icons img {
+  height: 1.2rem;
+}
+
+.greeting p:nth-child(2) {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.buttons button {
+  outline: none;
+  border: none;
+  background-color: var(--sidebar-color);
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-weight: bold;
+}
+
+.content {
+  background-color: var(--content-color);
+}
