--- a/style.css
+++ b/style.css
@@ -128,7 +128,8 @@ label,
 .content {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  padding: 15px;
+  padding: 20px 30px 20px 20px;
+  background-color: var(--content-color);
 }
 
 .projects {
@@ -138,13 +139,15 @@ label,
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   gap: 20px;
 }
 
 .card {
-  height: 200px;
+  display: grid;
+  height: max(200px, auto);
   padding: 15px;
+  grid-template-rows: max-content 1fr;
   background-color: white;
   border-radius: 10px;
   border-left: 10px solid var(--accent-color);
@@ -154,8 +157,19 @@ label,
   grid-column: 1 / -1;
 }
 
-.announcement {
-  border: 2px solid orange;
+.announcement-cards {
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+}
+
+.border-bottom {
+  border: 1px solid rgba(161, 161, 170, 0.3);
+  margin-top: 20px;
 }
 
 .projects h3,
@@ -165,15 +179,21 @@ label,
 }
 
 .users {
-  border: 2px solid indianred;
-  padding: 15px 15px 15px 0;
+  padding: 25px 15px 25px 0;
   display: grid;
   row-gap: 20px;
+  background: white;
+  border-radius: 10px;
+}
+
+.userinfo p:first-child {
+  font-weight: 600;
+  color: var(--accent-color)
 }
 
 .user {
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 35% 65%;
 }
 
 .user img {
@@ -182,7 +202,6 @@ label,
 
 .wrapper {
   display: grid;
-  grid-template-areas: 1fr 1fr;
   gap: 20px;
 }
 
@@ -198,10 +217,6 @@ input[type="search"] {
 
 input[type="search"]:focus-visible {
   border: 1px solid var(--accent-color);
-}
-
-.card {
-  display: grid;
 }
 
 .card-icons {
@@ -245,7 +260,8 @@ input[type="search"]:focus-visible {
 
 .card h4 {
   font-size: 1.2rem;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
+  align-self: center;
 }
 
 input[type="search"] {
@@ -257,8 +273,4 @@ input[type="search"] {
   padding-left: 8px;
   font-size: 1rem;
   width: 90%
-}
-
-.content {
-  background-color: var(--content-color);
 }
